--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom analytics snippet -->
-
+<script defer src="https://track.fantasticjoe.com/script.js" data-website-id="d3127c62-e9d8-4164-8702-a69128b40f5b"></script>
 <!-- end custom analytics snippet -->
